--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,43 @@
-server {
-    listen 80;
-    server_name  mikhailpukhov.ru www.mikhailpukhov.ru;
-    access_log  /var/log/nginx/domains/mikhailpukhov.ru-access.log  main;
-    error_log   /var/log/nginx/domains/mikhailpukhov.ru-error.log info;
-    location / {
-		index  index.html index.htm index.php;
-	}
+
+user nginx;
+worker_processes 4;
+worker_cpu_affinity auto;
+worker_rlimit_nofile 10000;
+pcre_jit on;
+error_log /var/log/nginx/error.log warn;
+events {
+multi_accept on;
+accept_mutex off;
+worker_connections 1024;
 }
+http {
+sendfile on;
+tcp_nopush on;
+charset UTF-8;
+tcp_nodelay on;
+open_file_cache max=200000 inactive=20s;
+open_file_cache_valid 120s;
+open_file_cache_errors on;
+reset_timedout_connection on;
+client_body_timeout 10;
+keepalive_timeout 65;
+include /etc/nginx/sites-enabled.*.conf;
+    server {
+          listen 80;
+          server_name  localhost;
+          access_log  off;
+          charset UTF-8;
+          error_log off;
+             location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        charset UTF-8;
+
+             }
+             error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+             }
+    	 }
+        
+     }
